[gd_scene load_steps=11 format=3 uid="uid://yc7k03mwbxli"]

[ext_resource type="Script" path="res://Scenes/main.gd" id="1_qr2gh"]
[ext_resource type="PackedScene" uid="uid://bmccqmg1mieg1" path="res://Scenes/Player/ship.tscn" id="1_rp00h"]
[ext_resource type="Texture2D" uid="uid://vg3dwytxtnq5" path="res://Sprites/Backgrounds/regularSpace.jpg" id="2_kguvi"]
[ext_resource type="PackedScene" uid="uid://c3yhbj0x0j02u" path="res://Scenes/Enemies/enemyDummy2.tscn" id="5_7762o"]
[ext_resource type="PackedScene" uid="uid://bntpsskh5r4hm" path="res://Scenes/Enemies/real_enemy.tscn" id="5_d7660"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ja3k7"]
size = Vector2(16, 960)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y25up"]
size = Vector2(1664, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sodlk"]
size = Vector2(1668, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_47cye"]
size = Vector2(16, 960)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ur3yu"]
size = Vector2(16.0001, 1296)

[node name="Main" type="Node2D"]
script = ExtResource("1_qr2gh")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.678431, 1, 1)
position = Vector2(1156, 420)
scale = Vector2(0.804167, 0.777778)
texture = ExtResource("2_kguvi")
metadata/_edit_lock_ = true

[node name="Proyectiles" type="Node" parent="."]

[node name="Enemies" type="Node" parent="."]

[node name="Enemy" parent="Enemies" instance=ExtResource("5_7762o")]
position = Vector2(1344, 464)

[node name="RealEnemy" parent="Enemies" instance=ExtResource("5_d7660")]
position = Vector2(1304, 272)

[node name="Ship" parent="." instance=ExtResource("1_rp00h")]
z_index = 1
position = Vector2(640, 416)

[node name="BulletBounds" type="StaticBody2D" parent="."]
position = Vector2(768, 320)
metadata/_edit_lock_ = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BulletBounds"]
position = Vector2(-448, 96)
shape = SubResource("RectangleShape2D_ja3k7")
metadata/_edit_lock_ = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="BulletBounds"]
position = Vector2(384, 576)
shape = SubResource("RectangleShape2D_y25up")
metadata/_edit_lock_ = true

[node name="CollisionShape2D4" type="CollisionShape2D" parent="BulletBounds"]
position = Vector2(386, -384)
shape = SubResource("RectangleShape2D_sodlk")
metadata/_edit_lock_ = true

[node name="CollisionShape2D5" type="CollisionShape2D" parent="BulletBounds"]
position = Vector2(1216, 96)
shape = SubResource("RectangleShape2D_47cye")
metadata/_edit_lock_ = true

[node name="PlayerBounds" type="StaticBody2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBounds"]
position = Vector2(1664, 416)
shape = SubResource("RectangleShape2D_ur3yu")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PlayerBounds"]
position = Vector2(384, 416)
shape = SubResource("RectangleShape2D_ur3yu")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="PlayerBounds"]
position = Vector2(1024, -2.22703e-07)
rotation = 1.5708
shape = SubResource("RectangleShape2D_ur3yu")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="PlayerBounds"]
position = Vector2(1024, 832)
rotation = 1.5708
shape = SubResource("RectangleShape2D_ur3yu")

[node name="UI" type="Control" parent="."]
z_index = 1
layout_mode = 3
anchors_preset = 0

[node name="ColorRect3" type="ColorRect" parent="UI"]
layout_mode = 0
offset_right = 384.0
offset_bottom = 1080.0
color = Color(0.259294, 0.259294, 0.259294, 1)

[node name="ColorRect4" type="ColorRect" parent="UI"]
layout_mode = 0
offset_left = 1656.0
offset_top = 8.0
offset_right = 1928.0
offset_bottom = 832.0
color = Color(1, 0, 0, 0.278431)

[node name="ColorRect5" type="ColorRect" parent="UI"]
layout_mode = 0
offset_left = 384.0
offset_top = 832.0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(6.61798e-07, 0.260467, 2.40654e-08, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label2" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 22
text = "Ship values"

[node name="HSeparator" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="Damage" type="HBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="UI/VBoxContainer/Damage"]
layout_mode = 2
text = "Damage = "

[node name="Number" type="Label" parent="UI/VBoxContainer/Damage"]
layout_mode = 2
text = "1"

[node name="MoreDamage" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "+"

[node name="LessDamage" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "-"

[node name="Amount" type="HBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="UI/VBoxContainer/Amount"]
layout_mode = 2
text = "Amount = "

[node name="Number" type="Label" parent="UI/VBoxContainer/Amount"]
layout_mode = 2
text = "1"

[node name="MoreAmount" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "+"

[node name="LessAmount" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "-"

[node name="Burst" type="HBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="UI/VBoxContainer/Burst"]
layout_mode = 2
text = "Burst = "

[node name="Number" type="Label" parent="UI/VBoxContainer/Burst"]
layout_mode = 2
text = "1"

[node name="MoreBurst" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "+"

[node name="LessBurst" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "-"

[node name="HSeparator2" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 22
text = "Trig values"

[node name="HSeparator4" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="Trigonometrics" type="HBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="UI/VBoxContainer/Trigonometrics"]
layout_mode = 2
text = "Trigonometrics = "

[node name="Number" type="Label" parent="UI/VBoxContainer/Trigonometrics"]
layout_mode = 2
text = "0"

[node name="MoreTrig" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "+"

[node name="LessTrig" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "-"

[node name="HSeparator5" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="HSeparator6" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 22
text = "Orbit values"

[node name="HSeparator7" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="Orbit_N" type="HBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="UI/VBoxContainer/Orbit_N"]
layout_mode = 2
text = "N = "

[node name="Number" type="Label" parent="UI/VBoxContainer/Orbit_N"]
layout_mode = 2
text = "0"

[node name="MoreOrbitN" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "+"

[node name="LessOrbitN" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "-"

[node name="Orbit_D" type="HBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="UI/VBoxContainer/Orbit_D"]
layout_mode = 2
text = "D = "

[node name="Number" type="Label" parent="UI/VBoxContainer/Orbit_D"]
layout_mode = 2
text = "0"

[node name="MoreOrbitD" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "+"

[node name="LessOrbitD" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "-"

[connection signal="pressed" from="UI/VBoxContainer/MoreDamage" to="." method="_on_more_damage_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/LessDamage" to="." method="_on_less_damage_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/MoreAmount" to="." method="_on_more_amount_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/LessAmount" to="." method="_on_less_amount_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/MoreBurst" to="." method="_on_more_burst_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/LessBurst" to="." method="_on_less_burst_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/MoreTrig" to="." method="_on_more_trig_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/LessTrig" to="." method="_on_less_trig_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/MoreOrbitN" to="." method="_on_more_orbit_n_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/LessOrbitN" to="." method="_on_less_orbit_n_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/MoreOrbitD" to="." method="_on_more_orbit_d_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/LessOrbitD" to="." method="_on_less_orbit_d_pressed"]
